--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+		<!--Sourcing Angular-->
+	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+     <script type="text/javascript" src="bower_components/firebase/firebase.js"></script>
+     <script type="text/javascript" src="bower_components/angularfire/dist/angularfire.js"></script>
 
 	<title>Tic Tac Toe</title>
 
@@ -103,7 +107,8 @@
 		<div id="TTT_box">
 				
 
-			<div class="box" ng-repeat = "box in game.boxes" ng-click="game.click($index)">
+			<div class="box" ng-repeat = "box in game.binding.boxes" ng-click="game.click($index)">
+		
 				<h1 class ="box_h1">{{box.move}}</h1>	
 
 			</div> 
@@ -128,8 +133,8 @@
 		</div>
 
 	</div> <!--End of Main Container-->
-		<!--Sourcing Angular-->
-    <script type="text/javascript" charset="utf-8" src="bower_components/angular/angular.min.js"></script>
+
+    
     	<!-- Source in module -->
     <script type="text/javascript" src="js/main.js"></script>
     	<!-- Source in controller -->
